chore(repo): bootstrap Next app, centralize TS config, docs; fix Next config; ignore .next" -m "Goal: - Run Next dev server reliably and unify TypeScript config across packages.
Why:
- Next 14 does not support next.config.ts; dev 404s were cache/runtime related.
- Reduce TS duplication; improve docs for onboarding.

How:
- Added next config as [apps/web/next.config.mjs](apps/web/next.config.mjs).
- Central TS base at [shared/tsconfig/tsconfig.base.json](shared/tsconfig/tsconfig.base.json) and extended in [apps/web/tsconfig.json](apps/web/tsconfig.json) + [packages/shared/tsconfig.json](packages/shared/tsconfig.json).
- Updated docs: [README.md](README.md), [.github/github-instructions.md](.github/github-instructions.md); logs in [CHANGELOG.md](CHANGELOG.md), [monorepoTimeline.md](monorepoTimeline.md).
- Ignore Next build output in [.gitignore](.gitignore).

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "packages/*"
   ],
   "scripts": {
-    "lint": "echo \"lint: nothing to lint yet\"",
-    "typecheck": "echo \"typecheck: no TS projects yet\"",
-    "test": "echo \"test: no tests yet\"",
-    "build": "echo \"build: nothing to build yet\"",
+    "lint": "npm run lint -ws",
+    "typecheck": "npm run typecheck -ws",
+    "test": "npm run test -ws",
+    "build": "npm run build -ws",
     "ci": "npm run lint && npm run typecheck && npm run test && npm run build",
     "dev:web": "npm --workspace @doewe/web run dev"
   },
