--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "lint": "echo 'shared: nothing to lint yet'",
-    "typecheck": "echo 'shared: no TS config yet'",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
     "test": "echo 'shared: no tests yet'",
     "build": "echo 'shared: nothing to build yet'"
   }
