chore(eslint): centralize ESLint base and wire up workspaces
Goal: Gemeinsame ESLint‑Basis ohne Prettier. Why: Einheitliche Code‑Qualität im Monorepo. How: Added shared base at [shared/eslint/eslint.base.cjs](shared/eslint/eslint.base.cjs), extended in [apps/web/.eslintrc.json](apps/web/.eslintrc.json) and [packages/shared/.eslintrc.json](packages/shared/.eslintrc.json); updated scripts/devDeps; docs in [CHANGELOG.md](CHANGELOG.md), [monorepoTimeline.md](monorepoTimeline.md).

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "lint": "echo 'shared: nothing to lint yet'",
+    "lint": "eslint . --ext .ts,.tsx",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "test": "echo 'shared: no tests yet'",
     "build": "echo 'shared: nothing to build yet'"
