--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -1,4 +1,5 @@
 {
   "root": true,
-  "extends": ["next/core-web-vitals"]
+  "extends": ["../../shared/eslint/eslint.base.cjs", "next/core-web-vitals"],
+  "env": { "browser": true, "es2021": true }
 }
