--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "test": "echo 'web: no tests yet'"
   },
