test: fix Vitest discovery across monorepo
Goal: Tests sollen vom Root und aus Workspaces gefunden werden.
Why: `vitest run` endete mit "No test files found".
How: Root in vitest.config.ts gesetzt und include-Pattern erweitert; Changelog/Timeline aktualisiert.

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "lint": "eslint . --ext .ts,.tsx",
     "typecheck": "tsc -p tsconfig.json --noEmit",
-    "test": "echo 'shared: no tests yet'",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "build": "echo 'shared: nothing to build yet'"
   }
 }
