--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "8.57.0",
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-unused-imports": "3.2.0"
+    "eslint-plugin-unused-imports": "3.2.0",
+    "vitest": "1.6.0"
   }
 }
