ci: run on all branches and allow manual runs
Why: push to non-main branch didn’t trigger. How: broadened triggers in [./.github/workflows/ci.yml](.github/workflows/ci.yml), added workflow_dispatch; updated [CHANGELOG.md](CHANGELOG.md) and [monorepoTimeline.md](monorepoTimeline.md).

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,12 @@ name: CI
 
 on:
   push:
-    branches: [main, master]
+    branches:
+      - "**"        # run on all branches
   pull_request:
+    branches:
+      - "**"        # run on PRs from any branch
+  workflow_dispatch:  # allow manual runs from GitHub UI
 
 concurrency:
   group: ci-${{ github.ref }}
