chore(repo): pin Node 20, add lint:fix, upgrade TS ESLint; fix lint and money parse
Goal: Stabilize DX and green checks. Why: Remove TS ESLint warning, enable workspace --fix, resolve lint warnings, correct negative money parsing. How: Added .nvmrc=20; bumped @typescript-eslint to v7; added lint:fix scripts; fixed import ordering/unused param; applied parseCents sign fix; updated command-only instructions.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx",
+    "lint:fix": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx --fix",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "test": "echo 'web: no tests yet'"
   },
