--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   ],
   "scripts": {
     "lint": "npm run lint -ws",
+    "lint:fix": "npm run lint -ws -- --fix",
     "typecheck": "npm run typecheck -ws",
     "test": "npm run test -ws",
     "build": "npm run build -ws",
@@ -17,8 +18,8 @@
     "node": ">=18.18.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "6.21.0",
-    "@typescript-eslint/parser": "6.21.0",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
     "eslint": "8.57.0",
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-import": "2.29.1",
