feat(web): add in-memory transactions API and UI; chore(shared): expose exports; chore(repo): pin Node and upgrade eslint tooling
Goal: Frühe End-to-End Validierung der Domain im UI. Why: Schnelles Feedback und nutzbarer Prototyp. How: API /api/transactions (GET/POST), UI /transactions; @doewe/shared als Workspace eingebunden und in Next transpiliert; shared exports/types; .nvmrc=20; @typescript-eslint auf v7; Lint-Fixes und lint:fix-Skripte.

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -2,6 +2,14 @@
   "name": "@doewe/shared",
   "version": "0.0.0",
   "private": true,
+  "types": "./src/index.ts",
+  "exports": {
+    ".": {
+      "types": "./src/index.ts",
+      "import": "./src/index.ts",
+      "require": "./src/index.ts"
+    }
+  },
   "scripts": {
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
