feat(web): persist transactions with Prisma and align UI/API
Goal: Persistente Transaktionen + funktionierender UI-Flow.
Why: Daten nach Reload behalten; Formular-POST passte nicht zum API-Schema.
How: Prisma Schema/Seed/Client in [apps/web/prisma](apps/web/prisma) und [apps/web/lib/prisma.ts](apps/web/lib/prisma.ts); API mit Prisma+Zod in [apps/web/app/api/transactions/route.ts](apps/web/app/api/transactions/route.ts); UI-Form an Vertrag angepasst in [apps/web/app/transactions/page.tsx](apps/web/app/transactions/page.tsx); Next transpiles @doewe/shared in [apps/web/next.config.mjs](apps/web/next.config.mjs); CI-Hook in [.github/workflows/ci.yml](.github/workflows/ci.yml); Doku aktualisiert in [CHANGELOG.md](CHANGELOG.md), [monorepoTimeline.md](monorepoTimeline.md).

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,7 @@ jobs:
           node-version-file: .nvmrc
           cache: npm
       - run: npm ci
+      - run: npm --workspace @doewe/web run db:push
       - run: npm run test -ws
 
   build:
