--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,22 +7,31 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx",
-    "lint:fix": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx --fix",
     "typecheck": "tsc -p tsconfig.json --noEmit",
-    "test": "echo 'web: no tests yet'"
+    "pretest": "prisma generate && prisma db push && npm run db:seed",
+    "test": "echo 'web: no tests yet'",
+    "db:push": "prisma generate && prisma db push",
+    "db:seed": "prisma db seed",
+    "prisma:generate": "prisma generate"
   },
   "dependencies": {
-    "@doewe/shared": "workspace:*",
+    "@doewe/shared": "file:../../packages/shared",
+    "@prisma/client": "5.19.1",
     "next": "14.2.5",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "20.14.11",
     "@types/react": "18.3.5",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
+    "prisma": "5.19.1",
     "typescript": "5.6.3"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   },
   "engines": {
     "node": ">=18.18.0"
