--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,7 +28,11 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "prisma": "5.19.1",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "tailwindcss": "3.4.10",
+    "postcss": "8.4.41",
+    "autoprefixer": "10.4.20",
+    "@tailwindcss/forms": "0.5.7"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
