--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "pretest": "prisma generate && prisma db push && npm run db:seed",
-    "test": "echo 'web: no tests yet'",
+    "test": "vitest run",
     "db:push": "prisma generate && prisma db push",
     "db:seed": "prisma db seed",
     "prisma:generate": "prisma generate"
@@ -17,22 +17,24 @@
   "dependencies": {
     "@doewe/shared": "file:../../packages/shared",
     "@prisma/client": "5.19.1",
+    "chart.js": "^4.5.1",
     "next": "14.2.5",
     "react": "18.3.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "18.3.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "0.5.7",
     "@types/node": "20.14.11",
     "@types/react": "18.3.5",
+    "autoprefixer": "10.4.20",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
-    "prisma": "5.19.1",
-    "typescript": "5.6.3",
-    "tailwindcss": "3.4.10",
     "postcss": "8.4.41",
-    "autoprefixer": "10.4.20",
-    "@tailwindcss/forms": "0.5.7"
+    "prisma": "5.19.1",
+    "tailwindcss": "3.4.10",
+    "typescript": "5.6.3"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
