--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "@doewe/shared": "file:../../packages/shared",
     "@prisma/client": "5.19.1",
     "chart.js": "^4.5.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "next": "14.2.5",
     "react": "18.3.1",
     "react-chartjs-2": "^5.3.1",
