feat: add cross-env for environment variable management in development
Goal:
To enhance the development experience by allowing the use of environment variables in a cross-platform manner.

Why:
The addition of the `cross-env` package enables developers to set environment variables in a way that is compatible across different operating systems, particularly for running development servers. This is crucial for ensuring that all team members can run the application without encountering OS-specific issues.

How:
- Updated `package.json` to include `cross-env` as a dependency and added a new script `dev:web:lan` to facilitate running the development server on a local area network (LAN) with specified host and port.
- Updated `package-lock.json` to reflect the addition of `cross-env` version 7.0.3.
- The `dev.db` file was modified, indicating a binary change, which may relate to database schema updates or data migrations.

Changes made:
- Added `cross-env` dependency in `package.json`.
- Introduced `dev:web:lan` script in `package.json` for easier LAN development.
- Updated `package-lock.json` to include the new dependency.
- Noted binary changes in `dev.db`.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "npm run build -ws",
     "ci": "npm run lint && npm run typecheck && npm run test && npm run build",
     "dev:web": "npm --workspace @doewe/web run dev",
+    "dev:web:lan": "node -e \"console.log('LAN dev server: http://192.168.2.137:3000')\" && cross-env HOST=0.0.0.0 PORT=3000 npm --workspace @doewe/web run dev",
     "postinstall": "npm --workspace @doewe/web run prisma:generate"
   },
   "engines": {
@@ -25,6 +26,7 @@
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-unused-imports": "3.2.0",
-    "vitest": "1.6.0"
+    "vitest": "1.6.0",
+    "cross-env": "7.0.3"
   }
 }
