--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,14 +12,15 @@
     "test": "vitest run",
     "db:push": "prisma generate && prisma db push",
     "db:seed": "prisma db seed",
-    "prisma:generate": "prisma generate"
+    "prisma:generate": "prisma generate",
+    "prisma:migrate:deploy": "prisma migrate deploy"
   },
   "dependencies": {
     "@doewe/shared": "file:../../packages/shared",
     "@prisma/client": "5.19.1",
     "chart.js": "^4.5.1",
     "chartjs-plugin-datalabels": "^2.2.0",
-    "next": "14.2.5",
+    "next": "^14.2.35",
     "react": "18.3.1",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "18.3.1",
@@ -31,7 +32,7 @@
     "@types/react": "18.3.5",
     "autoprefixer": "10.4.20",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "^14.2.35",
     "postcss": "8.4.41",
     "prisma": "5.19.1",
     "tailwindcss": "3.4.10",
