--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,10 +64,10 @@ jobs:
       - run: npm ci
       - run: npm --workspace @doewe/web run db:push
         env:
-          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/doewe?schema=public
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
       - run: npm run test -ws
         env:
-          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/doewe?schema=public
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
   build:
     name: Build
@@ -81,3 +81,5 @@ jobs:
           cache: npm
       - run: npm ci
       - run: npm run build -ws
+        env:
+          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/doewe?schema=public
