--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # Copy to .env.local and fill with your own values (never commit .env.local)
-DATABASE_URL="postgresql://${{PGUSER}}:${{POSTGRES_PASSWORD}}@${{RAILWAY_PRIVATE_DOMAIN}}:5432/${{PGDATABASE}}"
+# DATABASE_URL="postgresql://${{PGUSER}}:${{POSTGRES_PASSWORD}}@${{RAILWAY_PRIVATE_DOMAIN}}:5432/${{PGDATABASE}}"
+DATABASE_URL="postgresql://postgres:WhLXNTNDCAYQVLdpXwsBGXFyVUUivERW@shortline.proxy.rlwy.net:40269/railway"
+# DATABASE_URL="postgresql://postgres:WhLXNTNDCAYQVLdpXwsBGXFyVUUivERW@shortline.proxy.rlwy.net:40269/railway?schema=public?sslmode=require"
 GOOGLE_CLIENT_ID="your-google-client-id"
 GOOGLE_CLIENT_SECRET="your-google-client-secret"
 NEXTAUTH_SECRET="change-me-to-a-long-random-string"
