--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,1 +1,4 @@
-DATABASE_URL="file:./prisma/dev.db"
+# DATABASE_URL="postgresql://user:password@host:5432/dbname"
+# NEXTAUTH_SECRET="set-a-strong-random-secret"
+# NEXTAUTH_URL="http://localhost:3000"
+# TEST_USER_ID_BYPASS="test-user"  # optional for local e2e or Vitest only
