--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,10 +17,13 @@
   },
   "dependencies": {
     "@doewe/shared": "file:../../packages/shared",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "5.19.1",
+    "bcryptjs": "2.4.3",
     "chart.js": "^4.5.1",
     "chartjs-plugin-datalabels": "^2.2.0",
     "next": "^14.2.35",
+    "next-auth": "^4.24.13",
     "react": "18.3.1",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "18.3.1",
@@ -30,6 +33,7 @@
     "@tailwindcss/forms": "0.5.7",
     "@types/node": "20.14.11",
     "@types/react": "18.3.5",
+    "@types/bcryptjs": "2.4.2",
     "autoprefixer": "10.4.20",
     "eslint": "8.57.0",
     "eslint-config-next": "^14.2.35",
