Add local DB setup and configurable seed user

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,4 +1,7 @@
-# DATABASE_URL="postgresql://user:password@host:5432/dbname"
+# DATABASE_URL="postgresql://user:password@localhost:5432/doewe_local"
 # NEXTAUTH_SECRET="set-a-strong-random-secret"
 # NEXTAUTH_URL="http://localhost:3000"
+# SEED_USER_EMAIL="demo@doewe.test"
+# SEED_USER_PASSWORD="demo1234"
+# SEED_USER_NAME="Demo User"
 # TEST_USER_ID_BYPASS="test-user"  # optional for local e2e or Vitest only
