--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-unused-imports": "3.2.0",
     "vitest": "1.6.0",
-    "cross-env": "7.0.3"
+    "cross-env": "7.0.3",
+    "typescript": "5.5.4"
   }
 }
